--- a/Client/package.json
+++ b/Client/package.json
@@ -11,8 +11,11 @@
   "author": "Geeth",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "parcel": "^2.7.0",
