--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
   "author": "Geeth",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.7.0",
     "process": "^0.11.10"
   }
